Grace/tests/gibbs/errors/t226.grace
// ERROR = P1040
catch {1 / 0}
    case

print "hi"
